refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -119,7 +119,7 @@
   position: absolute;
   display: flex;
   flex-flow: column wrap;
-  row-gap: 1.71vw;
+  row-gap: 1.61vw;
   max-width: 85vw;
   top: 30px;
   left: 3vw;
